--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "20Cm8BzAgc4P"
       },
@@ -56,7 +56,7 @@
         "id": "fu1xIyAcgq7X",
         "outputId": "e866352f-6c8a-4961-c891-c53ffc9d826f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "HpbLzMGUgc4R"
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -498,7 +498,7 @@
         "id": "IcPlu94CHgJx",
         "outputId": "c7b23599-9971-4ff8-d19b-8d3bb6cfb69f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,7 +871,7 @@
         "id": "A2IOyBDUHusD",
         "outputId": "0c566a7e-7ad5-47ce-8000-6de6e5a3114c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1213,7 +1213,7 @@
         "id": "k6EqPHdNIQut",
         "outputId": "215c6e32-94c5-40b4-a150-a84d9ca1759a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1320,7 +1320,7 @@
         "id": "hhvj4VeZHUso",
         "outputId": "fbc49466-c30b-48d7-b45d-6b582bc59ebe"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1362,7 +1362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1404,7 +1404,7 @@
         "id": "elTs_zEPgc4V"
       },
       "source": [
-        "Below 20,000 balance, there does not seem to be visibly clear relation with our target value. Over 20,000 balance, it seems that customers are more likely to subscribe a term deposit. Age seem to be correlated with balance as customer gets older their balance gets lower. But the relation of age with y is hard to observe."
+        "Below a balance of 20,000, there are no noticeable clusters. However, with balances over 20,000, customers appear more likely to subscribe to a term deposit. Age seems to correlate with balance, as customer balances tend to decrease with age. However, the relationship between age and subscription to a term deposit is difficult to discern."
       ]
     },
     {
@@ -1425,7 +1425,7 @@
         "id": "iag8k2EHMO8V",
         "outputId": "97c62c8d-98e1-43ba-a14e-bb7f004e223b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1438,15 +1438,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let's check whether marital seem to influence y."
-      ],
-      "metadata": {
-        "id": "-cwQe7g6NoYZ"
-      }
     },
     {
       "cell_type": "code",
@@ -1463,7 +1454,7 @@
         "id": "en0IYx80NmbR",
         "outputId": "0b07201a-7fdd-445e-b3e3-8f1838e70163"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1481,19 +1472,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Maybe single people are slighlty more tentative to subscribe to term deposit."
+        "Proportions are close but, single people have slightly more ratio."
       ],
       "metadata": {
         "id": "YLDkZjp-OcIG"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let's do it for other categorical variables with more than two unique inputs"
-      ],
-      "metadata": {
-        "id": "GU1ie9cCTT9A"
       }
     },
     {
@@ -1523,7 +1505,7 @@
         "id": "lq-7r3plS-PU",
         "outputId": "41822790-0468-48c0-af6e-1bd51cdc204e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1630,7 +1612,7 @@
         "id": "03NgSeK4SHzk",
         "outputId": "75f1492c-b6a4-46e1-c3e7-fed6a3a8bca1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1964,7 +1946,7 @@
         "id": "iDTRgKpLPo1E",
         "outputId": "2d9129d8-3c25-4864-c5d8-23b579ebc430"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2623,7 +2605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "zMb3nKOGgc4Z"
       },
@@ -2639,7 +2621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "9LibK6x5gc4Z"
       },
@@ -2665,7 +2647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2704,7 +2686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2751,7 +2733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2808,7 +2790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2885,7 +2867,7 @@
         "id": "9XAU_cpl1NEP",
         "outputId": "267cef49-a945-4d30-83fe-b7eebbe34e1a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
